day09 用法查询笔记.md

--- a/code2/用法查询笔记.md
+++ b/code2/用法查询笔记.md
@@ -290,6 +290,10 @@ chrome_options.add_argument('--headless') # 把Chrome浏览器设置为静默模
 driver = webdriver.Chrome(options = chrome_options) # 设置引擎为Chrome，在后台默默运行
 ```
 
+[完整用例](./day09/demo01.py)
+
+中文文档~真香啊: https://selenium-python-zh.readthedocs.io/en/latest/index.html
+
 >### 第10关 定时与邮件
 `2020年1月1日` 课堂：让爬虫按时向你汇报
 
