day09 schedule 测试用例

--- a/code2/day10/让爬虫按时向你汇报.md
+++ b/code2/day10/让爬虫按时向你汇报.md
@@ -10,7 +10,16 @@
 1. 爬虫
     http://www.weather.com.cn/weather/101280601.shtml
     
-2. 定时
+    [邮箱完整代码](./邮箱完整代码.py)
+2. 定时  
+    - 新库 `schedule`
+    - 安装 `pip install schedule`
+    - git仓库 https://github.com/dbader/schedule
+    - 官网 https://schedule.readthedocs.io/en/stable/
+    
+     [用例](./demo04.py)  
+     [测试用例](./demo04.py)
+    
 ### 5.代码组装
 ### 6.复习
 
