day09 让爬虫按时向你汇报.md

--- a/code2/day10/让爬虫按时向你汇报.md
+++ b/code2/day10/让爬虫按时向你汇报.md
@@ -21,5 +21,10 @@
      [测试用例](./demo04.py)
     
 ### 5.代码组装
+[完整案例](./demo08.py)
 ### 6.复习
+- 邮件 我们要用到`smtplib`和`email`库，前者负责连接服务器、登录、发送和退出的流程。后者负责邮件的标题与正文。
+- 对于定时，我们选取了`schedule`模块，它的用法非常简洁，官方文档里是这样讲述：
+- 注意2点: 首先，让该程序在本地电脑运行，而不是在课程系统里运行，因为课程的系统是会销毁程序的进程的。  
+  其次，保持程序一直运行的状态，和电脑在一直开机的状态。因为如果程序结束或者电脑关机了的话，就不会定时爬取天气信息了。 
 
