day11 建立爬虫军队.md

--- a/code2/day11/建立爬虫军队.md
+++ b/code2/day11/建立爬虫军队.md
@@ -11,3 +11,17 @@
 
 ### 4.拓展复习
 
+同步与异步——
+
+![](img/d11g 01-2019325141655.png)
+
+多协程，是一种非抢占式的异步方式。使用多协程的话，就能让多个爬取任务用异步的方式交替执行。
+
+![](img/2019-01-25-15-58-24.png)
+
+![](img/pcd11g 10-201918.png)
+
+![](img/pcd11g 11-201919.png)
+
+![](img/pcd11g 16-201918.png)
+
