--- a/code2/day13/当当图书榜单爬虫.md
+++ b/code2/day13/当当图书榜单爬虫.md
@@ -1,3 +1,15 @@
+## 练习介绍
+### 要求：
+请使用Scrapy，爬取当当网2018年图书销售榜单前3页的数据（图书名、作者和书的价格）。  
+
+当当网2018年图书销售榜单链接：
+http://bang.dangdang.com/books/bestsellers/01.00.00.00.00.00-year-2018-0-1-1  
+
+###目的：
+- 练习定义item
+- 练习编写spiders文件
+- 练习修改settings文件
+
 ## 知识点回顾
 
 ### 定义item的代码示例：
