day15 逢山开路与不甘庸碌.md-目录

--- a/code2/day15/逢山开路与不甘庸碌.md
+++ b/code2/day15/逢山开路与不甘庸碌.md
@@ -1,3 +1,21 @@
+## 1.爬虫总复习
+- 工具
+- 工具解析与提取(一)
+- 工具解析与提取(二)
+- 更厉害的请求
+- 储存
+- 更多的爬虫
+- 更多的爬虫更强大的爬虫-框架
+- 给爬虫加上翅膀
+## 2.爬虫进阶的路线指引
+- 解析与提取
+- 存储
+- 数据分析与可视化
+- 更多的爬虫
+- 更强大的爬虫-框架
+- 项目训练
+## 3.反爬虫应对策略汇总
+
 反爬虫应对策略汇总
 说完了进阶路线指引，我们来说反爬虫。几乎所有的技术人员对反爬虫都有一个共识：所谓的反爬虫，从不是将爬虫完全杜绝；而是想办法将爬虫的访问量限制在一个可接纳的范围，不要让它过于肆无忌惮。
 
