day14 出任爬虫公司.md

--- a/code2/day14/出任爬虫公司.md
+++ b/code2/day14/出任爬虫公司.md
@@ -1,1 +1,15 @@
+## 出任爬虫公司
+### 1. 复习
+### 2. 明确目标
+### 3. 分析过程
+- 企业排行榜的公司信息
+- 公司详情页面的招聘信息
+### 4. 代码实现
+- 创建项目
+- 定义item
+### 5. 创建和编写爬虫文件
+- 存储文件
+- 修改设置
+### 6. 代码实操
+### 7. 小结
 Scrapy的自带解析器怎么用？如何带参数请求数据？如何写入cookies？如何发送邮件？如何与selenium联动？如何完成超厉害的分布式爬虫……如是种种。
